--- a/style.css
+++ b/style.css
@@ -32,14 +32,6 @@ header {
   color: white;
 }
 
-.container {
-  position: relative;
-  z-index: 1;
-  padding: 20px;
-  max-width: 900px;
-  margin: auto;
-}
-
 #btn-login {
   position: absolute;
   top: 20px;
@@ -66,10 +58,6 @@ header {
   height: auto;
 }
 
-.img {
-  width: 100px;
-}
-
 .titulo-escola {
   font-family: "Playwrite AU NSW", cursive;
   font-weight: 600;
@@ -80,6 +68,8 @@ header {
 }
 
 .container {
+  position: relative;
+  z-index: 1;
   padding: 20px;
   max-width: 900px;
   margin: auto;
@@ -89,7 +79,7 @@ header {
   width: 80%;
   padding: 10px;
   font-size: 16px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   border: 2px solid #001f3f;
   border-radius: 5px;
   color: #001f3f;
@@ -99,10 +89,38 @@ header {
   color: #aaa;
 }
 
+.botoes-generos {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 20px;
+  justify-content: center;
+}
+
+.botao-genero {
+  background-color: #001f3f;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+  font-family: "Playwrite AU NSW", cursive;
+  transition: background-color 0.3s ease;
+}
+
+.botao-genero:hover {
+  background-color: #003366;
+}
+
+.botao-genero.ativo {
+  background-color: #ff4136;
+}
+
 .titulo-genero {
   margin-top: 40px;
   margin-bottom: 10px;
-  color: #001f3f; /* Azul marinho */
+  color: #001f3f;
   font-weight: bold;
   font-size: 22px;
 }
@@ -127,14 +145,6 @@ header {
 .livro-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 6px 12px rgba(255, 65, 54, 0.4);
-}
-
-.livro-card img {
-  width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-  border-radius: 4px;
-  border: 1px solid #001f3f;
 }
 
 .livro-card h3 {
