--- a/painel.css
+++ b/painel.css
@@ -16,7 +16,7 @@ body {
 .sidebar {
   width: 240px;
   min-width: 240px;
-  background: linear-gradient(to bottom, #00173f, #b00000);
+  background: linear-gradient(to bottom, #005dffab, #930000bf);
   padding: 12px 10px;
   display: flex;
   flex-direction: column;
@@ -818,4 +818,5 @@ dialog#dialogSelecionar::backdrop {
   font-size: 1.2rem;
   cursor: pointer;
 }
+
 
